--- a/social-proof-section-master/index.html
+++ b/social-proof-section-master/index.html
@@ -42,7 +42,7 @@
   <body>
     <div class="container d-flex flex-column pt-5">
       <div id="no-padding" class="row d-flex justify-content-between">
-        <div class="col-lg-6">
+        <div class="col-lg-6 heading">
           <h1 class="">10,000+ of our users love our products.</h1>
           <p>
             We only provide great products combined with excellent customer
@@ -52,10 +52,10 @@
         </div>
         <div
           id="star-section"
-          class="col-lg-6 gap-3 d-flex flex-column five-stars"
+          class="col-lg-6 gap-2 d-flex flex-column five-stars"
         >
           <h6 id="h6-1" class="align-self-start">
-            <span>⭐⭐⭐⭐⭐</span> Rated 5 Stars in Reviews
+            <span>⭐⭐⭐⭐⭐ </span> Rated 5 Stars in Reviews
           </h6>
           <h6 id="h6-2" class="align-self-center">
             <span>⭐⭐⭐⭐⭐</span> Rated 5 Stars in Report Guru
@@ -65,17 +65,7 @@
           </h6>
         </div>
       </div>
-      <div
-        class="
-          row
-          d-flex
-          justify-content-between
-          pt-5
-          height
-          cards-section
-          mt-5
-        "
-      >
+      <div class="row d-flex justify-content-between pt-5 height cards-section">
         <div class="col-lg-3 align-self-start">
           <div class="d-flex gap-3">
             <img src="./images/image-colton.jpg" alt="" />
